--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&family=Fira+Sans:wght@400;900&display=swap" rel="stylesheet"> 
     <!-- own stylesheet for general stuff -->
     <link rel="stylesheet" href="/css/style.css">
-  <meta name="description" content="Een technische vraag die je bij niemand kwijt kunt is vervelend, maar nu is er een oplossing! Stuur een e-mail en ik probeer je technische probleem per e-mail op te lossen." />
+  <meta name="description" content="Twkr." />
 </head>
 
 <body>
