--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 
   <!-- CSS only -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&family=Fira+Sans:wght@400;900&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <!-- own stylesheet for general stuff -->
     <link rel="stylesheet" href="/css/style.css">
   <meta name="description" content="Twkr." />
