--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
   <main class="home-template">
         <div class="main-top-content container-fluid home-style flex-center">
 
-      <h1 class="top-title">TW</h1>
-      <h1 class="top-leadin text-center">EA</h1>
-      <h1 class="top-title">K</h1>
-      <h1 class="top-leadin text-center">E</h1>
-      <h1 class="top-title">R</h1>
+      <h1 class="top-title">TWKR</h1>
 </div>
   
 </body>
