--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 
   <!-- CSS only -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <!-- own stylesheet for general stuff -->
-    <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
+  <!-- own stylesheet for general stuff -->
+  <link rel="stylesheet" href="/css/style.css">
   <meta name="description" content="Twkr." />
 </head>
 
